edit file readme alwi

--- a/app/src/main/res/layout/choose_location.xml
+++ b/app/src/main/res/layout/choose_location.xml
@@ -73,6 +73,7 @@
             </LinearLayout>
 
         <Button
+            android:id="@+id/btKonfirmasi"
             android:layout_width="320dp"
             android:layout_height="50dp"
             android:textSize="20dp"
