--- a/app/src/main/res/layout/list_produk.xml
+++ b/app/src/main/res/layout/list_produk.xml
@@ -15,12 +15,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingVertical="15dp"
         app:layout_constraintVertical_bias="0.499">
 
         <ImageView
             android:id="@+id/imgProduk"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
             android:background="@drawable/susu" />
@@ -41,7 +42,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
                 android:text="Nama Produk"
                 android:textSize="18dp"
                 android:textStyle="bold" />
