--- a/app/src/main/res/layout/cart_page.xml
+++ b/app/src/main/res/layout/cart_page.xml
@@ -9,33 +9,32 @@
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_border"
+        android:layout_height="46dp"
+        android:background="@color/mainColor"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageButton
-            android:id="@+id/btBack"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:id="@+id/btBackk"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
-            android:background="@drawable/back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/back" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="130dp"
-            android:text="Cart"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="150dp"
+            android:layout_marginLeft="100dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="Troli Anda"
             android:textColor="@color/white"
-            android:textSize="27dp"
-            app:layout_constraintStart_toEndOf="@+id/btBack"
-            app:layout_constraintTop_toTopOf="@+id/btBack" />
+            android:textSize="12dp" />
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -48,7 +47,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.664"
+        app:layout_constraintVertical_bias="0.16"
         tools:itemCount="3"
         tools:listitem="@layout/list_produk" />
 
@@ -75,8 +74,9 @@
             android:id="@+id/tvTotalHarga"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
             android:text="Rp.0,00"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="70dp"
             android:layout_weight="1"/>
@@ -86,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Checkout"
+            android:backgroundTint="@color/mainColor"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="40dp"/>
     </LinearLayout>
