--- a/app/src/main/res/layout/input_barang.xml
+++ b/app/src/main/res/layout/input_barang.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/btBack"
+        android:id="@+id/btKembali"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@color/black"
