--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="transparent">#80FFFFFF</color>
     <color name="semi_grey">#E6E6E6</color>
     <color name="grey">#999999</color>
+    <color name="semi_green">#007965</color>
 </resources>
